--- a/.github/workflows/content-web.yml
+++ b/.github/workflows/content-web.yml
@@ -73,7 +73,8 @@ jobs:
         helm package . content-web:v${{ env.tag }}
         helm package. ${{ env.containerRegistry }}/helm/content-web:v${{ env.tag }}
         
-
+        # list out saved charts
+        helm chart list
       env:
         HELM_EXPERIMENTAL_OCI: 1
 
