--- a/.github/workflows/content-web.yml
+++ b/.github/workflows/content-web.yml
@@ -2,27 +2,33 @@ name: content-web
 
 # This workflow is triggered on push to the 'content-web' directory of the  master branch of the repository
 on:
-   push:
-      branches:
-         - master
-      paths:
-         - 'content-web/**'
+ push:
+   branches:
+   - master
+   paths:
+   - 'content-web/**'
 
-   # Configure workflow to also support triggering manually
-   workflow_dispatch:
+ # Configure workflow to also support triggering manually
+ workflow_dispatch:
+   inputs:
+     logLevel:
+       description: 'Log level'
+       required: true
+       default: 'warning'
 
 # Environment variables are defined so that they can be used throughout the job definitions.
 env:
-  imageRepository: 'content-web'
-  resourceGroupName: 'fabmedical-pim'
-  containerRegistryName: 'fabmedicalpim'
-  containerRegistry: 'fabmedicalpim.azurecr.io'
-  dockerfilePath: './content-web'
-  tag: '${{ github.run_id  }}'
+ imageRepository: 'content-web'
+ resourceGroupName: 'fabmedical-pim'
+ containerRegistryName: 'fabmedicalpim'
+ containerRegistry: 'fabmedicalpim.azurecr.io'
+ dockerfilePath: './content-web'
+ tag: '${{ github.run_id  }}'
 
 # Jobs define the actions that take place when code is pushed to the master branch
 jobs:
-  build-and-publish-docker-image:
+
+ build-and-publish-docker-image:
     name: Build and Push Docker Image
     runs-on: ubuntu-latest
     steps:
@@ -49,7 +55,8 @@ jobs:
         tags: |
           ${{ env.containerRegistry }}/${{ env.imageRepository }}:${{ env.tag }}
           ${{ env.containerRegistry }}/${{ env.imageRepository }}:latest
-  build-and-push-helm-chart:
+
+ build-and-push-helm-chart:
     name: Build and Push Helm Chart
     runs-on: ubuntu-latest
     needs: [build-and-publish-docker-image]
@@ -69,16 +76,16 @@ jobs:
     - name: Helm Chart Save
       run: |
         cd ./content-web/charts/web
-
-        helm package . content-web:v${{ env.tag }}
-        helm package . ${{ env.containerRegistry }}/helm/content-web:v${{ env.tag }}
- 
+        helm chart save . content-web:v${{ env.tag }}
+        helm chart save . ${{ env.containerRegistry }}/helm/content-web:v${{ env.tag }}
+        # list out saved charts
+        helm chart list
       env:
         HELM_EXPERIMENTAL_OCI: 1
 
     - name: Helm Chart Push
       run: |
         helm registry login ${{ env.containerRegistry }} --username ${{ secrets.ACR_USERNAME }} --password ${{ secrets.ACR_PASSWORD }}
-        helm push ${{ env.containerRegistry }}/helm/content-web:v${{ env.tag }}
+        helm chart push ${{ env.containerRegistry }}/helm/content-web:v${{ env.tag }}
       env:
         HELM_EXPERIMENTAL_OCI: 1
