--- a/.github/workflows/content-web.yml
+++ b/.github/workflows/content-web.yml
@@ -79,7 +79,7 @@ jobs:
         helm chart save . content-web:v${{ env.tag }}
         helm chart save . ${{ env.containerRegistry }}/helm/content-web:v${{ env.tag }}
         # list out saved charts
-        helm chart list
+        # helm list
       env:
         HELM_EXPERIMENTAL_OCI: 1
 
