--- a/content-web/charts/web/templates/deployment.yaml
+++ b/content-web/charts/web/templates/deployment.yaml
@@ -36,6 +36,7 @@ spec:
           ports:
             - name: http
               containerPort: 80
+              hostPort: 80
               protocol: TCP
           env:
             - name: CONTENT_API_URL
