--- a/.github/workflows/content-api.yml
+++ b/.github/workflows/content-api.yml
@@ -14,10 +14,10 @@ on:
 # Environment variables are defined so that they can be used throughout the job definitions.
 env:
   imageRepository: 'content-api'
-  resourceGroupName: 'fabmedical-pim'
-  clusterName: 'fabmedical-pim'
-  containerRegistryName: 'fabmedicalpim'
-  containerRegistry: 'fabmedicalpim.azurecr.io'
+  resourceGroupName: 'fabmedical-ndc'
+  clusterName: 'fabmedical-ndc'
+  containerRegistryName: 'fabmedicalndc'
+  containerRegistry: 'fabmedicalndc.azurecr.io'
   dockerfilePath: './content-api'
   tag: '${{ github.run_id  }}'
 
