--- a/.github/workflows/content-web.yml
+++ b/.github/workflows/content-web.yml
@@ -19,9 +19,9 @@ on:
 # Environment variables are defined so that they can be used throughout the job definitions.
 env:
  imageRepository: 'content-web'
- resourceGroupName: 'fabmedical-pim'
- containerRegistryName: 'fabmedicalpim'
- containerRegistry: 'fabmedicalpim.azurecr.io'
+ resourceGroupName: 'fabmedical-ndc'
+ containerRegistryName: 'fabmedicalndc'
+ containerRegistry: 'fabmedicalndc.azurecr.io'
  dockerfilePath: './content-web'
  tag: '${{ github.run_id  }}'
 
