--- a/content-web/charts/web/values.yaml
+++ b/content-web/charts/web/values.yaml
@@ -5,7 +5,7 @@
 replicaCount: 1
 
 image:
-  repository: fabmedicalpim.azurecr.io/content-web
+  repository: fabmedicalndc.azurecr.io/content-web
   pullPolicy: Always
   # Overrides the image tag whose default is the chart appVersion.
   tag: ""
